--- a/css/common.css
+++ b/css/common.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700;900&display=swap');
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css);
 *{font-family:'Noto Sans TC', sans-serif;}
-
+html{
+    scroll-behavior: smooth;
+}
 body{
-    background-image: url("back/blue.jpg");
+    background-image: url("../back/blue.jpg");
+    background-image:repeat;
 }
 main{
     margin: auto;
@@ -14,7 +17,9 @@ header{
     height:150px;
     text-align: center;
     padding: 30px 0;
-    background-image: url("back/green.png");
+    background-image: url("../back/green.png");
+    background-size: contain;
+    background-repeat: repeat;
 }
 header a img{
     height: 100%;
@@ -22,7 +27,8 @@ header a img{
 nav{
     max-width: 1200px;  
     border-radius: 0 0 15px 15px;
-    background-image: url("back/green.png");
+    background-image: url("../back/green.png");
+    background-size: contain;
     margin: auto;
     position: sticky;
     top: 0;
@@ -63,7 +69,9 @@ nav{
     border-left:1px dashed #aaa ;
 }
 .list>a{
+    display: inline-block;
     line-height: 60px;
+    width: 100%;
 }
 .list>ul{ 
     width: 100%;
@@ -80,12 +88,17 @@ nav{
     padding: 15px 0;
     transition:.4s;
 }
+.list ul li a{
+    display: inline-block;
+    width: 100%;
+    line-height: 30px;
+}
 .list:hover>ul{
     transform: scaleY(1);
     transition: .5s .3s;
 } 
 .list>ul>li:hover{
-    background-color:#dddbd4;
+    background-color:#deebc9;
 }
 .list:hover::before{
     height: 60px;
@@ -106,14 +119,15 @@ nav{
     display: inline-block;
     height: 100%;
     width: 336px;
-    background:no-repeat center/100% url("back/cloud.png");
+    background:no-repeat center/100% url("../back/cloud.png");
     text-align: center;
     line-height: 250px;
     border-radius: 0 0 56px 56px;
     box-shadow:0 8px 5px -4px rgba(81, 96, 110,.6) ; 
 }
 footer{
-    background-image: url("back/green.png");
+    background-image: url("../back/green.png");
+    background-size:contain;
     position: relative;
     height: 300px;
     padding-bottom:30px;
@@ -124,7 +138,7 @@ footer::after{
     content: "";
     width: 100%;
     height:38px;
-    background-image:url("back/grass.png");
+    background-image:url("../back/grass.png");
     position:absolute ;
     top:-38px;
     right: 0;
@@ -177,7 +191,7 @@ footer h3{
     height: 93px;
     width: 78px;
     position: absolute;
-    background:no-repeat center/100% url("item/totop.png");
+    background:no-repeat center/100% url("../item/totop.png");
     text-align: center;
     bottom: 100%;
 }
@@ -255,7 +269,7 @@ footer h3{
     display: block;
     width: 100px;
     height:100px;
-    background: no-repeat center/100% url("logo/service.svg")
+    background: no-repeat center/100% url("../logo/service.svg")
     ;
 }
 .server label{
@@ -310,7 +324,7 @@ transform: scale(1);
 }
 #bot:checked+label,
 .server:hover>label{
-    background: no-repeat center/100% url("logo/serviceopen.svg")
+    background: no-repeat center/100% url("../logo/serviceopen.svg")
     ;
 }
 /* 圓按鈕 */
@@ -385,7 +399,8 @@ transform: scale(1);
     position: relative;
     width: 100%;
     height: 350px;
-    background-image: url("back/green.png");
+    background-image: url("../back/green.png");
+    background-size: contain;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -429,4 +444,15 @@ transform: scale(1);
     position: absolute;
     transform: translate(-50%,calc(-50% - 30px));
     left: 50%;
+}
+.select{
+    margin: auto;
+    text-align: end;
+    margin-bottom: 12px;
+}
+form select{
+   width: 100px; 
+   text-align: center;
+   padding: 3px 0;
+   border-radius:10px;
 }
