--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,29 @@
+
+.wrap{
+    height:100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    perspective: 10px;
+    ;
+}
+.para{
+    height: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform-style: preserve-3d;
+    
+}
+.para :is(.back,.fore){
+    position: absolute;
+    width: 100vw;
+    object-fit: contain;
+}
+.para .fore{
+    align-self: flex-end;
+    bottom: 0;
+}
 .bar{
    max-width: 1200px;
    margin: auto;
@@ -23,7 +49,7 @@
 }
 .txt{
     width: 50%;
-    background:no-repeat center/100% url("back/cloud.png");
+    background:no-repeat center/100% url("../back/cloud.png");
     opacity: .8;
     position: absolute;
     left: 0;
@@ -41,7 +67,7 @@
     position: absolute;
     top: 0;
     left: -40px;
-    background:no-repeat center/100% url("back/cloud.png");
+    background:no-repeat center/100% url("../back/cloud.png");
     background-size: contain;
     width: 200px;
     height: 200px;
@@ -52,7 +78,7 @@
     position: absolute;
     bottom: 0;
     right: 0px;
-    background:no-repeat center/100% url("back/cloud.png");
+    background:no-repeat center/100% url("../back/cloud.png");
     background-size: contain;
     width: 200px;
     height: 200px;
@@ -115,7 +141,7 @@
     transform:translateY(30%);
 } 
 .sheeprow{ 
-    background-image:url("ready/green.png") ;
+    background-image:url("../ready/green.png") ;
     height: 100%;
     left: 0;
     right: 0;
@@ -182,7 +208,7 @@
     left: -20px;
     text-align: center;
     line-height: 220px;
-    background:no-repeat center/100% url("back/cloud.png");
+    background:no-repeat center/100% url("../back/cloud.png");
     font-size: 20px;
 }
 .act>.btnchangecolor{
@@ -234,7 +260,7 @@
     bottom: 0;
     margin: auto;
     padding: 0 50px;
-    background-image: url('back/green.png');
+    background-image: url('../back/green.png');
     position: absolute;
     border-radius: 10px;
     display: flex;
