--- a/css/shop.css
+++ b/css/shop.css
@@ -18,7 +18,7 @@ section{
 }
 .spot::after{
     content:"";
-    background:center / contain no-repeat url("back/spot.png") ;
+    background:center / contain no-repeat url("../back/spot.png") ;
     width: 100%;
     height: 100%;
     position: absolute;
