--- a/css/about.css
+++ b/css/about.css
@@ -29,6 +29,9 @@ main{
     border-radius: 10px;
     overflow: hidden;
 }
+.price table tr:nth-child(2) td{
+    background-color: #e2ffad;
+}
 .price table tr td{
     background-color: #fff;
     color: #2C6E00;
@@ -48,13 +51,115 @@ tr td:first-child{
 .map{
     position: relative;
     display: flex;
-    margin: 0 auto 150px auto; 
+    justify-content: center;
+    margin: 0 auto 150px auto;   
 }
-.map img{
-    width: 75%;
+.map .pin {
+    position: relative;
+}
+.map .pin img{
+    width: 100%;
     max-height: 500px;
     object-fit:cover;
     border-radius: 10px;
+}
+.map .pin input{
+    position: absolute;
+    display: none;
+}
+.map .pin input:checked{
+    display: block;
+}
+.map .pin input:checked::after{
+    transform-origin:center;
+    animation:pin 1s 0s linear infinite alternate;
+}
+@keyframes pin{
+    0%{transform: scale(0.9);
+    }
+    100%{transform:scale(1.3);
+       }
+}
+.map .pin input#ground{
+    bottom:250px;
+    right: 250px;
+}
+.map .pin input::before{
+    font-size: 1rem;
+    font-weight: 700;
+    width: 100px;
+    height: 20px;
+    text-align: center;
+    top: -35px;
+    right: -45px;
+    position: absolute;
+    text-shadow: 1px 0px 5px #fff;
+}
+.map .pin input#ground::before{
+    content: "羊羊廣場";
+}
+.map .pin input#house::before{
+    content: "山羊羊舍";
+}
+.map .pin input#diy::before{
+    content: "手作教室";
+}
+.map .pin input#kit::before{
+    content: "手作廚房";
+}
+.map .pin input#ground::before{
+    content: "羊羊廣場";
+}
+.map .pin input#cheese::before{
+    content: "起司研究室";
+}
+.map .pin input#bq::before{
+    content: "烤肉帳篷";
+}
+.map .pin input#market::before{
+    content: "小農市集";
+}
+.map .pin input#center::before{
+    content: "遊客服務中心";
+}
+.map .pin input#house{
+    bottom:300px;
+    right: 550px;
+}
+.map .pin input#diy{
+    top:100px;
+    right: 120px;
+}
+.map .pin input#kit{
+    top:100px;
+    right:250px;
+}
+.map .pin input#cheese{
+    top:35px;
+    right: 350px;
+}
+.map .pin input#bq{
+    bottom:280px;
+    right: 650px;
+}
+.map .pin input#market{
+    bottom:350px;
+    right: 680px;
+}
+.map .pin input#center{
+    bottom:200px;
+    right: 600px;
+}
+.map .pin input::after{
+    content:" ";
+    background-image:url("../item/sheep-svg.svg") ;
+    width: 50px;
+    height: 50px;
+    background-size: contain;
+    position: absolute;
+    top: -100%;
+    left: -100%;
+    z-index: 2;
 }
 .btngroup{
     width: 20%;
@@ -63,14 +168,14 @@ tr td:first-child{
     flex-direction: column;
     justify-content: space-between;
 }
-.btngroup button{
+.btngroup label{
     width: 100%;
     padding: 10px 0px;
     border-radius: 50px;
     border: none;
     box-shadow: 0 0 2px rgba(81, 96, 110, .8);
 }
-.btngroup button i{
+.btngroup label i{
     color: transparent;
     margin-right: 5px;
 }
@@ -137,6 +242,21 @@ tr td:first-child{
     line-height: 90px;
     vertical-align: bottom;
     font-size: 1.2rem;
+    position: relative;
+}
+.time a::after{
+    content: "";
+    position: absolute;
+    width: 0px;
+    border:0px;
+    bottom: 10px;
+    left: 50px;
+    transition: width .5s,border 0s;
+    z-index: -1;
+}
+.time a:hover::after{
+    width: 50%;
+    border:2px dashed #2C6E00;
 }
 .time a img{
     height: 100%;
