--- a/css/activity.css
+++ b/css/activity.css
@@ -218,6 +218,61 @@
 .plan{
     margin: auto;
 }
-.card{
+.plan .row{
+    margin: auto;
+    background-color: #fff;
+    border-radius: 10px;
+    width: 100%;
+    height: 200px;
     display: flex;
+    padding: 1rem 2rem;
+    margin: 1rem 0px;
+    justify-content: space-between;
+    transition: .3s;
+}
+.plan .row:hover{
+    box-shadow: 0px 5px 4px rgb(81, 96, 110, .7);
+}
+.plan .row img{
+    width:40%;
+    border-radius: 10px;
+    object-fit: cover;
+}
+.plan .row .txt{
+    width: 40%;
+    text-align: center;
+    padding: 1rem 0px;
+    inset: 0;
+    margin: auto;
+}
+.plan .row .txt h3{
+    font-size: 20px;
+    margin-bottom: 1rem;
+}
+.plan .row .txt p{
+    line-height: 1.5rem;
+}
+.plan .row .price{
+    width: 20%;
+    text-align: center;
+    inset: 0;
+    margin: auto;
+}
+.plan .row .price p{
+    font-weight: 700;
+    font-size:20px;
+    text-align: center; 
+    vertical-align: middle;
+    line-height:2.5rem;
+}
+.plan .row .price .more{
+    position: static;
+    margin:0px auto;
+    height:2rem;
+    border-radius: 50px;
+    border: 2px solid #2C6E00;
+}
+.plan .row .price .more a{
+    height: 100%;
+    width: 100%;
 }
