--- a/css/common.css
+++ b/css/common.css
@@ -3,6 +3,7 @@
 *{font-family:'Noto Sans TC', sans-serif;}
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 body{
     background-image: url("../back/blue.jpg");
