--- a/css/detail.css
+++ b/css/detail.css
@@ -70,6 +70,7 @@ section .breadcrumb{
     height: 24px;
     border-radius: 15px;
     border: none;
+    cursor: pointer;
 }
 .info .txt .numbtn button:nth-child(2){
 background-color: #D0F1A6;
