--- a/css/index.css
+++ b/css/index.css
@@ -85,7 +85,7 @@
 }
 .sum{
     max-width: 1000px;
-    margin:100px auto 0;
+    margin:100px auto 150px;
     position: relative;
     display:flex ;
     justify-content:space-around;
@@ -132,35 +132,53 @@
     transform: scale(1.1);
 }
 .new{
-    margin-top:150px ;
-    width: 100%;
-    height: 450px;
+    width:100%;
     position: relative;
+    
 }
 .new .cloudtitle{
     transform:translateY(30%);
-} 
+}
+.new .ground{
+   width: 100%;
+   background-image:url("../back/green.png") ;
+   padding-top: 40px;
+}
 .sheeprow{ 
-    background-image:url("../ready/green.png") ;
+    max-width: 1280px;
     height: 100%;
-    left: 0;
-    right: 0;
-    padding-top: 32px;
+    margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 200px;
     position: relative;
     overflow: hidden;
+    padding: 50px 0px 90px 0px;
 }
-.sheeprow>a{
-    margin: 0 30px;
+.sheeprow .newcol{
+    width: 33%;
+    padding:0 30px; 
 }
-.sheeprow a img{
-    width:400px;
+.sheeprow .newcol a{
+    width: 100%;
 }
-.sheeprow a:nth-child(2){
-    align-self: flex-start;
+.sheeprow .newcol h3{
+    color:#2C6E00;
+    text-align: center;
+    display: block;
+    width: 80%;
+    text-overflow: ellipsis; 
+    white-space: nowrap;
+    overflow: hidden;
+    margin: auto;
+    text-shadow: 0px 5px 5px #bcbcbc;
+}
+.sheeprow .newcol a img{
+    width: 100%;
+}
+.sheeprow .newcol:nth-child(2){
+    transform: translateY(-50px);
 }
 .sheeprow .btn{
     text-align: center;
@@ -177,7 +195,7 @@
 .activity{
     position: relative;
     max-width: 1200px;
-    margin:400px auto 150px;
+    margin:auto;
 } 
 .act{
     max-width: 1000px;
