--- a/css/milkshop.css
+++ b/css/milkshop.css
@@ -85,4 +85,8 @@ section .item img{
 height:170px ;
 max-width: 170px;
 object-fit: contain;
+transition: .2s;
+}
+section .item:hover img{
+    transform: scale(1.1);
 }
