--- a/css/QA.css
+++ b/css/QA.css
@@ -72,7 +72,6 @@ section{
 }
 .env{
     width: 70%;
-    height: 380px;
     background-color: #fff;
     margin:auto ;
     clip-path: polygon(25% 0%, 75% 0%, 100% 20%, 100% 100%, 0 100%, 0 22%);
@@ -80,7 +79,7 @@ section{
 .env .content{
     width: 75%;
     height: 100%;
-    padding-top:10%;
+    padding:10% 0px 10px;
     margin: auto;
 }
 .content form{
@@ -149,8 +148,7 @@ section{
     overflow: hidden;
     border-radius: 100px;
     border: 2px solid #2C6E00;
-    margin: auto;
-    margin-top: 20px;
+    margin:20px auto;
 }
 .btnchangecolortxt{
     width: 100%;
