--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700;900&display=swap');
+@import url(https://fonts.googleapis.com/earlyaccess/cwtexyen.css);
+@import url('https://fonts.googleapis.com/css2?family=Belanosima:wght@400;700&family=Kosugi+Maru&family=Noto+Sans+TC:wght@400;500;700;900&family=Pangolin&display=swap');
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css);
-*{font-family:'Noto Sans TC', sans-serif;}
+*{font-family:'Pangolin','Belanosima','Kosugi Maru','Noto Sans TC', 'sans-serif;'}
 html{
     scroll-behavior: smooth;
     overflow-x: hidden;
