--- a/css/common.css
+++ b/css/common.css
@@ -373,6 +373,7 @@ transform: scale(1);
     background-clip: text;
     -webkit-background-clip: text;
     transition: .5s;
+    vertical-align: middle;
 }
 .btnchangecolor:hover{
     background-position: 0% 0%;
@@ -382,13 +383,18 @@ transform: scale(1);
 }
 /* 更多小按鈕 */
 .more{
-    font-size: 14px;
     position: absolute;
     width: 110px;
-    padding: 5px 0;
+    padding: 4px 0;
     border-radius: 20px;
 }
+.more a{
+    font-size: 14px;
+    line-height: 14px;
+    vertical-align: bottom;
+}
 .more a i{
+    line-height: 14px;
     margin-left: 5px;
     animation: go .6s 0s linear infinite alternate;
 }
