--- a/css/common.css
+++ b/css/common.css
@@ -1,10 +1,10 @@
-@import url(https://fonts.googleapis.com/earlyaccess/cwtexyen.css);
-@import url('https://fonts.googleapis.com/css2?family=Belanosima:wght@400;700&family=Kosugi+Maru&family=Noto+Sans+TC:wght@400;500;700;900&family=Pangolin&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Noto+Sans+TC:wght@300;400;500;700;900&family=Pangolin&display=swap');
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css);
-*{font-family:'Pangolin','Belanosima','Kosugi Maru','Noto Sans TC', 'sans-serif;'}
+*{font-family:'Pangolin','Kosugi Maru','Noto Sans TC', 'sans-serif;'}
 html{
     scroll-behavior: smooth;
     overflow-x: hidden;
+    
 }
 body{
     background-image: url("../back/blue.jpg");
@@ -57,9 +57,8 @@ nav{
     right: 0;
     top: 0;
     background-color:#FFFFFF;
-    transition: .3s .3s;
+    transition: .2s .2s;
     z-index: -1;
-    
 }
 .list:first-child::before{
     border-radius: 0 0 0 15px;
@@ -74,6 +73,7 @@ nav{
     display: inline-block;
     line-height: 60px;
     width: 100%;
+    font-size: 700;
 }
 .list>ul{ 
     width: 100%;
@@ -82,13 +82,13 @@ nav{
     background-size: 12px 12px;
     background-color:#FFFFFF;
     box-shadow: 0 6px 4px  rgba(81, 96, 110,.6);
-    transition:.25s linear;
+    transition:.2s linear;
     transform: scaleY(0);
     transform-origin: top;
 }
 .list ul li{
     padding: 15px 0;
-    transition:.4s;
+    transition:.3s;
 }
 .list ul li a{
     display: inline-block;
@@ -97,14 +97,14 @@ nav{
 }
 .list:hover>ul{
     transform: scaleY(1);
-    transition: .5s .3s;
+    transition: .3s .2s;
 } 
 .list>ul>li:hover{
     background-color:#deebc9;
 }
 .list:hover::before{
     height: 60px;
-    transition:.3s
+    transition:.2s
 }
 .cloudtitle{
     position: relative;
@@ -159,7 +159,8 @@ footer h3{
     height: 100%;
     display: flex;
     justify-content: space-evenly;
-    padding-top: 50px;
+    padding-top: 30px;
+    align-items: center;
     text-align: start;
     line-height: 24px;
 }
@@ -167,26 +168,31 @@ footer h3{
     line-height: 30px;
 }
 .footer h3,.footer p{color: #0f2800;}
-.col img{
-    height: 164px;
+.footer .col{
+    width: 30%;
+    text-align: center;
 }
-.col li{
+.footer .col img{
+    display: block;
+    width: 100%;
+}
+.footer .col li{
     display: inline-block;
 }
-.social>a{
+.footer .social>a{
     display: block;
     font-weight: 700px;
     font-size: 19px;
     padding-top:20px ;
 }
-.social i{
+.footer .social i{
     color: #0f2800;
     padding: 4px 2px;
     margin-right: 10px;
     font-size: 20px;
     transition: .2s;
 }
-.social i:hover{
+.footer .social i:hover{
     color: #2C6E00;
 }
 .totop{
@@ -362,7 +368,7 @@ transform: scale(1);
     background:linear-gradient(45deg,rgb(44, 110, 0) 50%,#ffffff 50%);
     background-size: 220%;
     background-position: 100% 100%;
-    transition: .5s;
+    transition: .4s;
     cursor: pointer;
 }
 .btnchangecolortxt{
@@ -372,7 +378,7 @@ transform: scale(1);
     background-position: 100% 100%;
     background-clip: text;
     -webkit-background-clip: text;
-    transition: .5s;
+    transition: .4s;
     vertical-align: middle;
 }
 .btnchangecolor:hover{
@@ -397,7 +403,7 @@ transform: scale(1);
     font-size: 12px;
     line-height: 14px;
     margin-left: 5px;
-    animation: go .6s 0s linear infinite alternate;
+    animation: go .5s 0s linear infinite alternate;
     vertical-align:top;
 }
 @keyframes go{
@@ -465,4 +471,7 @@ form select{
    text-align: center;
    padding: 3px 0;
    border-radius:10px;
+}
+@media screen {
+    
 }
