--- a/css/index.css
+++ b/css/index.css
@@ -1,28 +1,55 @@
-
 .wrap{
     height:100vh;
-    overflow-y: auto;
     overflow-x: hidden;
-    perspective: 10px;
-    ;
+    position: relative;
 }
 .para{
     height: 100%;
-    position: relative;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    transform-style: preserve-3d;
+    align-items:flex-end;
+}
+.topmenu{
     
 }
-.para :is(.back,.fore){
-    position: absolute;
-    width: 100vw;
-    object-fit: contain;
+.topmenu li{
+    display: inline-block;
+    margin-right:0 ;
 }
-.para .fore{
-    align-self: flex-end;
+#moun{
+    left:0;
+    width: 100vw;
+    position: absolute;
+    bottom: 17%;
+}
+#floor{
+    width: 100vw;
+    object-fit: cover;
+    position: absolute;
     bottom: 0;
+}
+#paralogo{
+    width: 55%;
+    position: absolute;
+    right: 50%;
+    top: 20%;
+    transform: translateX(50%);
+    z-index: 2;
+}
+#cr{
+    position: absolute;
+    width: 35%;
+    top: 10%;
+    z-index: 2;
+    background-size: contain;
+    margin-left: auto;
+}
+#cl{
+    position: absolute;
+    top: -10%;
+    left: 0;
+    width: 40%;
 }
 .bar{
    max-width: 1200px;
@@ -45,9 +72,8 @@
 .vedio img{
     position: absolute;
     height: 100%;
-    
 }
-.txt{
+.bar .txt{
     width: 50%;
     background:no-repeat center/100% url("../back/cloud.png");
     opacity: .8;
@@ -85,22 +111,22 @@
 }
 .sum{
     max-width: 1000px;
-    margin:100px auto 150px;
+    margin:100px auto 100px;
     position: relative;
     display:flex ;
     justify-content:space-around;
 }
 .item{
-    width: 282px;
-    height:315px;
+    width: 30%;
     border: 5px solid white;
     border-radius:53% 47% 35% 65% / 61% 59% 41% 39%;
     overflow: hidden;
     transition: .3s ;
     box-shadow: 8px 8px 8px rgba(40, 68, 117,.5);
+    aspect-ratio: 6/7;
 }
 .item p{
-    font-size: 20px;
+    font-size: 1.25rem;
     position: absolute;
     width: 100px;
     height:100px;
@@ -134,7 +160,6 @@
 .new{
     width:100%;
     position: relative;
-    
 }
 .new .cloudtitle{
     transform:translateY(30%);
@@ -183,70 +208,74 @@
 .sheeprow .btn{
     text-align: center;
     position: absolute;
-    bottom:50px;
+    bottom:90px;
     width: 137px;
 }
 .sheeprow .btn button+button{
     margin-left: 80px;
 }
 .sheeprow .btnchangecolor{
-    bottom: 5px;
+    bottom: 1rem;
 }
 .activity{
     position: relative;
     max-width: 1200px;
-    margin:auto;
+    margin:0px auto 150px;
 } 
 .act{
-    max-width: 1000px;
-    height: 530px;
     margin:auto ;
     display: flex;
+    justify-content: space-between;
+    max-width: 1000px;
 }
 .act .card{
     width: 100%;
-    height: 465px;
     position: relative;
-    margin: 0 20px;
+    margin: 0 1.25rem;
+    text-align: center;
+    border: 5px solid #fff;
+    border-radius: 150px 150px 50px 50px ;
+    overflow: hidden;
+    box-shadow:2px 8px 7px rgba(56, 109, 145,.5);
+    aspect-ratio:4/6 ;
 }
 .act .card img{
     height: 100%;
-    width: 80%;
-    border: 10px solid #ffffff;
+    width: 100%;
     object-fit: cover;
     object-position:center;
-    border-radius: 150px 150px 50px 50px ;
-    box-shadow:8px 25px 7px rgba(56, 109, 145,.5);
 }
 .card h3{
     position: absolute;
     width: 100%;
-    height: 200px;
-    bottom: -30px;
-    left: -20px;
+    height: 40%;
+    transform: translateY(3%);
+    bottom: 0px;
     text-align: center;
-    line-height: 220px;
+    padding-top: 30%;
     background:no-repeat center/100% url("../back/cloud.png");
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 .act>.btnchangecolor{
-    bottom: 5px;
-    right: 100px;
+    right: 50%;
+    bottom: 0;
+    transform: translate(50%, 200%);
 }
 .shop .sum{
-    margin-bottom: 80px;
+    margin:70px auto;
     position: relative;
 }
 .shop .sum img{
     object-position: center;
 }
-.shop .sum .btnchangecolor{
-    right: 0;
-    bottom: -40px;
+.shop .sum .more{
+    right: 50%;
+    bottom: 0;
+    transform: translate(50%, 200%);
 }
 .goshop{
     padding: 20px;
-    width: 500px;
+    width: 400px;
     margin: auto; 
     transform: translateY(-50%);
     border-radius: 50px;
@@ -254,12 +283,12 @@
 .goshop a{
     text-align: center;
     letter-spacing: 5px;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 .goshop a i{
     color: transparent;
     margin-right: 10px;
-    font-size: 25px;
+    font-size: 1.5rem;
 }
 .contact{
     margin-top: 150px;
