--- a/css/about.css
+++ b/css/about.css
@@ -12,7 +12,6 @@ main{
 }
 .price table{
     width: 100%;
-    height: 300px;
     text-align: center;
     border-collapse:collapse ;
     border-radius: 10px;
@@ -20,18 +19,17 @@ main{
     font-size: 16px;
 }
 .price table th{
-    height:50px ;
+    height:3rem ;
     color: #2C6E00;
     font-size: 18px;
 }
 .price table tr{
-    border-bottom: 2px dashed #2C6E00;
+    border-bottom: 1px dashed #2C6E00;
     border-radius: 10px;
     overflow: hidden;
+    height: 3rem;
 }
-.price table tr:nth-child(2) td{
-    background-color: #e2ffad;
-}
+
 .price table tr td{
     background-color: #fff;
     color: #2C6E00;
