--- a/css/activity.css
+++ b/css/activity.css
@@ -13,9 +13,9 @@
     border: 3px solid #ffffff;
     border-radius: 10px;
 }
-.-center{
+/* .-center{
     transform: scale(1.1);
-}
+} */
 .pic .btn{
     text-align: center;
     position: absolute;
