--- a/css/common.css
+++ b/css/common.css
@@ -109,12 +109,10 @@ nav{
 .cloudtitle{
     position: relative;
     display: block;
-    margin: auto;
     font-size: 1.2rem;
     height: 200px;
     max-width:1200px ;
-    margin-bottom: 24px;
-    margin-top: 24px;
+    margin: 1.5rem auto;
     z-index: 2;
 }
 .cloudtitle h2{
@@ -379,7 +377,7 @@ transform: scale(1);
     background-clip: text;
     -webkit-background-clip: text;
     transition: .4s;
-    vertical-align: middle;
+    vertical-align: bottom;
 }
 .btnchangecolor:hover{
     background-position: 0% 0%;
@@ -389,19 +387,17 @@ transform: scale(1);
 }
 /* 更多小按鈕 */
 .more{
-    position: absolute;
     width: 110px;
-    padding: 4px 0;
     border-radius: 20px;
 }
 .more a{
     font-size: 14px;
-    line-height: 14px;
-    vertical-align: bottom;
+    line-height:24px;
+    vertical-align: middle;
 }
 .more a i{
     font-size: 12px;
-    line-height: 14px;
+    line-height: 1.5rem;
     margin-left: 5px;
     animation: go .5s 0s linear infinite alternate;
     vertical-align:top;
@@ -411,18 +407,54 @@ transform: scale(1);
     100%{transform: translateX(4px);}
 }
 /* 商品輪播 */
-.product{
-    position: relative;
+.productwrap{
     width: 100%;
-    height: 350px;
     background-image: url("../back/green.png");
     background-size: contain;
+    height: 350px;
+    padding-top:30px ;
+}
+.product{
+    margin: auto;
+    width: 88%;
+    height: 220px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    overflow: hidden;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    scrollbar-width: 0;;
+}
+.product::-webkit-scrollbar{
+    display: none;
+}
+.product.dragging{
+    scroll-snap-type:none;
+    scroll-behavior:auto;
+}
+.no-trans{
+    scroll-behavior:auto;
+}
+.product.dragging .object{
+    cursor: grab;
+    user-select: none;
+}
+.shop .btn{
+    display: inline-block;
+}
+.shop{
+    text-align: center;
+}
+.shop .btn #productname{
+    display: inline-block;
+    width: 120px;
+}
+.shop .btn button{
+    margin:0px 10px ;
 }
 .object{
+    scroll-snap-align: start;
     width: 220px;
     height: 220px;
     padding: 30px;
@@ -472,6 +504,10 @@ form select{
    padding: 3px 0;
    border-radius:10px;
 }
-@media screen {
-    
+@media screen and (max-width:768px){
+    .cloudtitle{
+        font-size: 1.2rem;
+        height: 200px;
+        text-align: center;
+    }
 }
