--- a/css/detail.css
+++ b/css/detail.css
@@ -32,6 +32,7 @@ section .breadcrumb{
     height: 100%;
     border-radius: 10px;
     object-fit: cover;
+    cursor: pointer;
 }
 .info .smallimg img+img{
     margin-top: 10px;
@@ -43,6 +44,7 @@ section .breadcrumb{
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    object-fit: cover;
 }
 .info .txt{
     width: 30%;
@@ -64,6 +66,7 @@ section .breadcrumb{
 }
 .info .txt .numbtn{
     width: 100%;
+    margin:8px 0px;
 }
 .info .txt .numbtn button{
     width: 24px;
