--- a/css/QA.css
+++ b/css/QA.css
@@ -2,60 +2,61 @@
     object-position:center;
 }
 section{
+    max-width: 1200px;
+    margin: auto;
     margin-bottom: 100px;
 }
-section ul{
-    width:70%;
+section .libar{
+    max-width: 900px;
     margin: auto;
+    margin-bottom: 0.5rem;
 }
-section ul li{
+section .libar .ques{
     width: 100%;
     background-color: #fff;
-    padding:10px 20px 0px 20px;
-    border-radius: 10px;
-    margin-bottom: 0.5rem;
-    overflow: hidden;
-    position: relative;
+    padding:10px 20px;
+    margin: auto;
+    display: flex;
+    align-items: center;
 }
 section ul li h3{
-    width: 85%;
     color:#2C6E00 ;
-    font-size: 20px;
-    line-height: 30px;
-    display: inline-block;
-    margin-bottom:10px;
+    font-size: 1.25rem;
+    line-height: 1.9rem;
 }
-.ans{
-    display: none;
-    padding-bottom: 0px; 
-    line-height: 25px;
-    font-size: 16px;
-    transition: .3s;
-    padding-bottom: 0px;
-}
-section ul li >i{
-    font-size: 30px;
+.fa-circle-plus{
+    font-size: 1.9rem;
     color: #2C6E00;
-    line-height: 30px;
+    line-height: 1.9rem;
     vertical-align: bottom;
-    position: absolute;
-    right: 20px;
     transform: rotate(0deg);
     transition: .1s;
+    margin-left: auto;
 } 
 section ul li p a{
     color: #2C6E00;
-    padding: 5px;
+    padding:0px 5px;
     font-weight: 700;
 }
-section ul li i{
+section ul li .ques .fa-quora{
+    color:#2C6E00 ;
+    line-height: 30px;
+    font-size: 20px;
     margin-right: 5px;
 }
-section ul li h3 i{
-  color:#2C6E00 ;  
+.ans{
+    display: none;
+    padding:10px 20px;
+    line-height: 1.5rem;
+    background-color: #fff;
+    border-radius: 0px 0px 10px 10px;
+    font-size: 1rem;
+    transition: .3s;
 }
-section{
-    width: 100%;
+.ans p{
+    display: inline-block;
+    width: 90%;
+    margin-left: 1.5rem;
 }
 .env{
     width: 70%;
@@ -141,4 +142,33 @@ section{
     width: 100%;
     border-radius: 100px;
     font-size:16px;
+}
+@media screen and (max-width:768px){
+section ul{
+    max-width: 600px;
+    padding:0px ;
+}
+.env{
+    width: 80%;
+}
+}
+@media screen and (max-width:400px){
+.env{
+    width: 100%;
+}
+.content form .inputstyle:first-child{
+    margin-right:0px;
+}
+}
+.quesclose{
+    border-radius: 10px 10px 10px 10px;
+}
+.quesopen{
+    border-radius: 10px 10px 0px 0px;
+}
+.open{
+    display: block; 
+}
+.rotate{
+    transform: rotate(45deg);
 }
