--- a/css/common.css
+++ b/css/common.css
@@ -127,10 +127,10 @@ footer{
     background-image: url("../back/green.png");
     background-size:contain;
     position: relative;
-    height: 300px;
     padding-bottom:30px;
     text-align: center;
     margin-top: 200px;
+    text-align: center;  
 }
 footer::after{
     content: "";
@@ -140,8 +140,7 @@ footer::after{
     position:absolute ;
     top:-38px;
     right: 0;
-    z-index: -1;
-    
+    z-index: -1;  
 }
 footer h3{
     font-size: 20px;
@@ -152,13 +151,12 @@ footer h3{
     margin: auto;
     max-width: 1100px;
     margin-top: 100px;
-    height: 100%;
     display: flex;
     justify-content: space-evenly;
-    padding-top: 30px;
-    align-items: center;
+    flex-wrap: wrap;
     text-align: start;
     line-height: 24px;
+    padding: 30px 10px;
 }
 .footer p{
     line-height: 30px;
@@ -188,7 +186,6 @@ footer h3{
     font-size: 20px;
     transition: .2s;
 }
-
 .totop{
     height: 93px;
     width: 78px;
@@ -340,7 +337,6 @@ transform: scale(1);
     transition: .2s;
     cursor: pointer;
 }
-
 .product{
     position: relative;
 }
@@ -361,7 +357,6 @@ transform: scale(1);
     background-position: 100% 100%;
     transition: .4s;
     cursor: pointer;
-    height: 1.5rem;
 }
 .btnchangecolortxt{
     color:transparent;
@@ -371,17 +366,17 @@ transform: scale(1);
     background-clip: text;
     -webkit-background-clip: text;
     transition: .4s;
-    line-height: 1.5rem;
 }
-
+.shop .more{
+    margin:0 auto 20px;
+}
 .btnchangecolor:hover .btnchangecolortxt{
     background-position: 0% 0%;
 }
 /* 更多小按鈕 */
 .more{
     width: 110px;
-    border-radius: 20px;
-    height:1.5rem;
+    border-radius: 50px;
 }
 .more a{
     font-size: 14px;
@@ -403,12 +398,11 @@ transform: scale(1);
     width: 100%;
     background-image: url("../back/green.png");
     background-size: contain;
-    height: 350px;
-    padding-top:30px ;
+    padding:30px ;
 }
 .product{
+    max-width: 1100px;
     margin: auto;
-    max-width:1100px;
     height: 220px;
     display: flex;
     justify-content: flex-start;
@@ -438,12 +432,8 @@ transform: scale(1);
 .shop{
     text-align: center;
 }
-.shop .btn #productname{
-    display: inline-block;
-    width: 120px;
-}
 .shop .btn button{
-    margin:0px 10px ;
+    margin:0px 50px ;
 }
 .object{
     scroll-snap-align: start;
@@ -496,6 +486,115 @@ form select{
    padding: 3px 0;
    border-radius:10px;
 }
+/* 行動版Nav */
+.monavbar{
+    position: absolute;
+    background-color: #90B44B;
+    /* top: 10%;
+    left: 20%; */
+    width: 15%;
+    display: flex;
+    justify-content: space-evenly;
+    border-radius: 0 50px 50px 0;
+    transition: .2s;
+    transform-origin: left;
+}
+.monavbar i{
+    line-height: 2rem;
+}
+.monav{
+    display: flex;
+    position: sticky;
+    top: 0;
+    right: 0;
+    z-index: 20;
+    justify-content:flex-start;
+    align-items: center;
+}
+.openm{
+    position:fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(51, 51, 51, .6);
+    backdrop-filter: blur(5px);
+    transition: .2s;
+}
+.monav .monav i{
+    font-size: 1.2rem;
+}
+.momenu{
+    width: 30%;
+    height: 30%;
+    position: absolute;
+    display: flex;
+    top: 1rem;
+    justify-content: center;
+    align-items: center;
+    transition: .3s .2s;
+}
+.active{
+    width: 350px;
+    height:350px;
+}
+.momenu .center{
+    position: absolute;
+    top: 0;
+    z-index: 10;
+    width: 60%;
+}
+.momenu .center>a{
+    display: block;
+    width: 100%;
+    
+}
+#monavlogo{
+    width: 100%;
+    z-index: 12;
+}
+
+.momenu li{
+    position: absolute;
+    transform-origin:175px;
+    transition: 1.2s;
+    transition-delay:calc( (360deg / 6 * var(--i)));
+    transform:rotate(0deg) translateX(150px);
+    top: 0;
+}
+.momenu li a{
+    transform: rotate(calc(360deg / -6 * var(--i)));
+    display: flex;
+    background-color: #fff;
+    width: 50px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+}
+.momenu li:nth-child(2) i{
+    display: block;
+    background-color: #fff;
+    width: 50px;
+    text-align: center;
+    line-height:50px ;
+    border-radius: 50px;
+    font-size: 1.5rem;
+    color: #2C6E00;
+}
+.momenu li a i{
+    font-size: 1.5rem;
+    color: #2C6E00;
+}
+.momenu.momenuopen li{
+    top: 50%;
+    left: 0;
+    transform:translateY(-50%) rotate(calc(360deg / 6 * var(--i)));
+
+}
+.momenu.momenuopen .center a img{
+    width: 150px;
+}
+
+
 @media screen and (hover:hover){
 .btnchangecolor:hover{
     background-position: 0% 0%;
@@ -512,7 +611,7 @@ form select{
     background-color: #FFF4E2;
 }
 }
-@media screen and (max-width:768px){
+@media screen and (max-width:767px){
     .cloudtitle{
         font-size: 1.2rem;
         height: 200px;
@@ -521,9 +620,39 @@ form select{
     .path{
         display: none;
     }
+    .footer{
+        align-items: flex-start;
+    }
+    .footer .col{
+        width: 50%;
+    }
+    .footer .col:nth-child(2){
+        width: 100%;
+    }
+    .footer .col:nth-child(2) img{
+        margin: auto;
+        width: 60%;
+        margin-bottom: 3rem;
+    }
+    
 }
 @media screen and (max-width:400px){
     .shop .product{
         width: 220px;
+    }
+    .footer{
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer .col{
+        width: 100%;
+        margin-bottom: 2rem;
+    }
+    .footer .col:nth-child(2) img{
+        width: 80%;
+        margin-bottom: 0;
+    }
+    footer>p{
+        padding: 0px 10px;
     }
 }
