--- a/css/shop.css
+++ b/css/shop.css
@@ -6,15 +6,17 @@ section{
     margin: auto;
 }
 .spot{
+    max-width: 680px;
     display: grid;
     margin:auto;
-    grid-template-columns:repeat(4,170px) ;
+    grid-template-columns:repeat(4,1fr) ;
     grid-template-rows:repeat(3,170px) ;
     justify-content: center;
     justify-items: center;
     align-items: center; 
     gap: 10px;
     position: relative;
+    margin-bottom: 100px;
 }
 .spot::after{
     content:"";
@@ -66,22 +68,19 @@ section{
 }
 .sum{
     max-width: 1000px;
-    margin:100px auto 0;
+    margin:100px auto 100px;
     position: relative;
     display:flex ;
     justify-content:space-around;
 }
 .item{
-    width: 282px;
-    height:315px;
-    border: 5px solid white;
-    border-radius:53% 47% 35% 65% / 61% 59% 41% 39%;
-    overflow: hidden;
+    margin: auto;
+    position: relative;
+    width: 30%;
     transition: .3s ;
-    box-shadow: 8px 8px 8px rgba(40, 68, 117,.5);
 }
 .item p{
-    font-size: 20px;
+    font-size: 1.25rem;
     position: absolute;
     width: 100px;
     height:100px;
@@ -91,30 +90,30 @@ section{
     text-align: center;
     line-height: 100px;
     z-index: 2;
-    transition: .2s;
+    transition: .3s;
     transform: scale(1);
+}
+.item span{
+    display: block;
+    border: 5px solid white;
+    overflow: hidden;
+    border-radius:53% 47% 35% 65% /61% 59% 41% 39%;
+    aspect-ratio: 6/7;
+    transition: .2s;
+    box-shadow: 8px 8px 8px rgba(40, 68, 117,.5);
 }
 .item img{
     height:100%;
     width: 100%;
     object-fit: cover;
-    object-position: left;
+    object-position:right;
     display: block;
     transform: scale(1);
-    transition: .5s;
+    transition: .4s;
 }
-.item:hover{
-    border-radius:52% 48% 51% 49% / 66% 32% 68% 34%;
-}
-.item:hover img{
-    transform: scale(1.1);
-}
-.item:hover p{
-    transform: scale(1.1);
-}
+
 .shop .sum{
-    margin-bottom: 80px;
-    position: relative;
+    margin-bottom: 40px;
 }
 .shop .sum img{
     object-position: center;
@@ -122,4 +121,100 @@ section{
 .shop .sum .btnchangecolor{
     right: 0;
     bottom: -40px;
+}
+@media screen and (hover:hover){
+    .item:hover{
+        border-radius:52% 48% 51% 49% / 66% 32% 68% 34%;
+    }
+    .item:hover img{
+        transform: scale(1.1);
+    }
+    .item:hover p{
+        transform: scale(1.1);
+    }
+}
+@media screen and (max-width:767px) {
+  .spot{
+    width: 90%;
+    grid-template-rows:repeat(3,120px) ;
+    gap: 5px;
+}  
+.spot> p{
+    line-height: 1.2rem;
+    font-size: 1rem;
+    font-weight: 700;
+    color: #2C6E00;
+}
+.spot .txt h2{
+    font-size: 1rem;
+    line-height: 1.2rem;
+    padding: 0.5rem;
+}
+.spot img:nth-child(3n-1){
+    grid-column: auto;
+}
+.spot .txt{
+    padding: 0.5rem 1rem;
+    width: 70%;
+    grid-column: 1/5;
+}
+.spot p:nth-child(6n+1){
+    justify-self: center;
+}
+.spot p:nth-child(6n-3){
+    justify-self:center;
+}
+.sum{
+    margin:100px auto;
+    flex-direction: column;
+}
+.item{
+    padding: 1rem 0px;
+    width: 80%;
+    transition: .3s ;
+    margin-bottom: 1rem;
+}
+.item:hover span{
+    border-radius:100px;
+}
+.item:hover p{
+    transform:translate(-50%, -50%) scale(1.1); 
+}
+.item span{
+    height: 20vh;
+    border-radius:100px;
+    aspect-ratio: auto;
+}
+.item p{
+    background-color: transparent;
+    font-size: 2.5rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    letter-spacing: 5px;
+    text-shadow: -1px -1px 5px #fff,
+    1px 1px 5px #fff;
+    line-height: 20vh;
+    vertical-align: middle;
+    width: auto;
+    height: auto;
+}
+}
+@media screen and (max-width:400px) {
+    .spot .txt{
+        width: 80%;
+    }
+    .spot> p{
+        font-size: 1.2rem;
+        font-weight: 700;
+        color: #2C6E00;
+    }
+    .spot .txt h2{
+        font-size: 1rem;
+        line-height: 1.2rem;
+        padding:0.5rem;
+    }
+    .spot .txt p{
+        font-size: 0.9rem;
+    }
 }
