--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,3 @@
-html {
-    scroll-padding-top: 60px; }
 main{
     max-width: 1200px;
     margin: auto;
@@ -8,10 +6,11 @@ main{
     object-position:bottom;
 }
 .price{
-    margin: 0 auto 150px auto;
+    margin: 0 auto 150px;
 }
 .price table{
-    width: 100%;
+    margin: auto;
+    width: 90%;
     text-align: center;
     border-collapse:collapse ;
     border-radius: 10px;
@@ -22,6 +21,8 @@ main{
     height:3rem ;
     color: #2C6E00;
     font-size: 18px;
+    min-width: 50px;
+    text-wrap: nowrap;
 }
 .price table tr{
     border-bottom: 1px dashed #2C6E00;
@@ -35,10 +36,17 @@ main{
     color: #2C6E00;
 }
 tr td:last-child{
-    width: 36%;
+    width: 30%;
 }
 tr td:first-child{
     width: 10%;
+}
+.price .car tr td:first-child{
+    min-width: 50px;
+    width: 10%;
+}
+tr td:nth-child(2){
+    width: 20%;
 }
 .price table tr i{
     font-size: 30px;
@@ -63,35 +71,35 @@ tr td:first-child{
 }
 .map .pin input{
     position: absolute;
-    display: none;
 }
 .map .pin input:checked{
     display: block;
 }
 .map .pin input:checked::after{
     transform-origin:center;
-    animation:pin 1s 0s linear infinite alternate;
+    animation:pin .7s 0s linear infinite alternate;
 }
 @keyframes pin{
-    0%{transform: scale(0.9);
+    0%{transform: scale(0.7);
     }
     100%{transform:scale(1.3);
        }
 }
-.map .pin input#ground{
-    bottom:250px;
-    right: 250px;
-}
+
 .map .pin input::before{
     font-size: 1rem;
     font-weight: 700;
     width: 100px;
     height: 20px;
     text-align: center;
-    top: -35px;
-    right: -45px;
+    top: -30px;
+    right: -50px;
     position: absolute;
-    text-shadow: 1px 0px 5px #fff;
+    text-shadow: 2px 2px 2px #fff,-2px -2px 2px #fff,2px -2px 2px #fff,-2px 2px 2px #fff;
+}
+.map .pin input#ground{
+    bottom:45%;
+    right: 33%;
 }
 .map .pin input#ground::before{
     content: "羊羊廣場";
@@ -121,32 +129,32 @@ tr td:first-child{
     content: "遊客服務中心";
 }
 .map .pin input#house{
-    bottom:300px;
-    right: 550px;
+    bottom:63%;
+    right: 70%;
 }
 .map .pin input#diy{
-    top:100px;
-    right: 120px;
+    top:21%;
+    right: 20%;
 }
 .map .pin input#kit{
-    top:100px;
-    right:250px;
+    top:23%;
+    right:35%;
 }
 .map .pin input#cheese{
-    top:35px;
-    right: 350px;
+    top:10%;
+    right: 46%;
 }
 .map .pin input#bq{
-    bottom:280px;
-    right: 650px;
+    bottom:57%;
+    left: 15%;
 }
 .map .pin input#market{
-    bottom:350px;
-    right: 680px;
+    top:22%;
+    left: 10%;
 }
 .map .pin input#center{
-    bottom:200px;
-    right: 600px;
+    bottom:40%;
+    left: 23%;
 }
 .map .pin input::after{
     content:" ";
@@ -168,6 +176,7 @@ tr td:first-child{
 }
 .btngroup label{
     width: 100%;
+    min-width: 120px;
     padding: 10px 0px;
     border-radius: 50px;
     border: none;
@@ -325,18 +334,66 @@ tr td:first-child{
     grid-column:3/5 ;
     grid-row:2/4 ;
 }
+.map .btngroup::-webkit-scrollbar {
+
+    width: 7px;
+
+  }
+.map .btngroup::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    background-color: #fff;
+    border-radius: 4px;
+  }
+.map .btngroup::-webkit-scrollbar-track {
+    background: #fff;
+    border-radius: 4px;
+}
+.map .btngroup::-webkit-scrollbar-thumb {
+    background: #90B44B;
+    border-radius: 4px;
+  }
+  
 @media screen and (max-width:768px){
     .map{
         flex-direction: column;
     }
     .map .btngroup{
-        width: 100%;
+        margin: auto;
+        width: 90%;
         flex-direction:row;
-        flex-wrap: wrap;
         margin-bottom: 1rem;
+        overflow-y: hidden;
+        overflow-x: scroll;
+        padding: 0;
     }
     .map .btngroup label{
-        margin: 0 0 0.5rem;
-        width: 22%;
+        margin: .5rem;
     }
+    .map .pin input::after{
+        width: 40px;
+        height: 40px;}
+    .map .pin input::before{
+        font-size: 0.9rem;
+    }
+    @keyframes pin{
+        0%{transform: scale(0.7);
+        }
+        100%{transform:scale(1.2);
+           }
+    }
+    
+}
+@media screen and (max-width:400px){
+    .price table :is(thead th,tr td):first-child,.price table tr td i{
+        display: none;
+    }
+    .pin{
+        margin: auto;
+        width: 500px;
+        height: 100vh;
+        transform: rotate(90deg);
+        height: 100%;
+    }
+
 }
