--- a/css/about.css
+++ b/css/about.css
@@ -10,7 +10,7 @@ main{
 }
 .price table{
     margin: auto;
-    width: 90%;
+    width: 80%;
     text-align: center;
     border-collapse:collapse ;
     border-radius: 10px;
@@ -250,6 +250,13 @@ tr td:nth-child(2){
     vertical-align: bottom;
     font-size: 1.2rem;
     position: relative;
+    
+}
+.time a p{
+    display: inline-block;
+    background-color: #fff;
+    border-radius: 45px;
+    line-height: 40px;
 }
 .time a::after{
     content: "";
@@ -273,7 +280,7 @@ tr td:nth-child(2){
 }
 .window{
     display: flex;
-    overflow-x:auto;
+    overflow-x:hidden;
     scroll-behavior: smooth;
 }
 .window::-webkit-scrollbar {
@@ -314,6 +321,7 @@ tr td:nth-child(2){
     border-radius: 10px;
 }
 .photo{
+    width: 83.33%;
     margin: auto;
     display: grid;
     grid-template-columns:repeat(4,1fr) ;
@@ -382,18 +390,65 @@ tr td:nth-child(2){
         100%{transform:scale(1.2);
            }
     }
-    
+    .story{
+        flex-direction: column;
+    }
+    .story .time{
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .story .time a{
+        width: 25%;
+        text-align: center;
+        height: 50px;
+        line-height: 50px;
+    }
+    .story .window{
+        width: 100%;
+    }
+    .window .page h3{
+        margin-bottom: 1rem;
+    }
+    .window .page p{
+        line-height: 1.3rem;
+        padding-left:1rem;
+    }
 }
 @media screen and (max-width:400px){
+    .price table{
+        width: 100%;
+    }
     .price table :is(thead th,tr td):first-child,.price table tr td i{
         display: none;
     }
+
     .pin{
         margin: auto;
-        width: 500px;
+        width: 100%;
         height: 100vh;
+        transform-origin: ;
         transform: rotate(90deg);
         height: 100%;
     }
-
+    .story .time{
+        flex-wrap: wrap;
+    }
+    .story .time a{
+        margin-bottom: 1rem;
+        width: 50%;
+    }
+    .photo{
+        width: 93%;
+        grid-template-columns:repeat(2,1fr) ;
+        grid-template-rows:repeat(4,1fr) ;
+    }
+    .photo img:first-child{
+        grid-row:1/2 ;
+        grid-column:1/3 ;
+    }
+    .photo img:nth-child(4){
+        grid-column:1/3 ;
+        grid-row:4/5;
+    }
 }
