--- a/css/activity.css
+++ b/css/activity.css
@@ -1,32 +1,54 @@
 .pic{
-    max-width: 1200px;
-    display: flex;
-    margin:auto;
-    position: relative;
-    justify-content: center;
-    /* overflow: hidden; */
+    width: 83%;
+    margin: auto;
+}
+.pic .content{
+    margin: auto;
+    font-size: 0px;
+    cursor: pointer;
+    white-space: nowrap; 
+    overflow: hidden;
+    scroll-behavior: smooth;
+}
+.pic .content.dragging{
+    cursor: grab;
+    scroll-behavior:auto;
+}
+.pic .content.dragging img{
+    pointer-events: none;
 }
 .pic .content img{
-    width:100%;
+    width:300px;
     height: 250px;
     object-fit: cover;
     border: 3px solid #ffffff;
     border-radius: 10px;
+    margin-left:10px ;
 }
-/* .-center{
-    transform: scale(1.1);
-} */
+.pic .content img:first-child{
+    margin-left:0rem ;
+}
 .pic .btn{
     text-align: center;
-    position: absolute;
-    width:300px ;
-    left: 0;
-    right: 0;
-    margin: 0px auto;
-    bottom: -50px;
+    margin:1rem auto 0;
 }
-.pic .btn button+button{
-    margin-left:100px ;
+.pic .btn ul{
+  display: inline-block;  
+}
+.pic  li{
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: #fff;
+    margin:auto 5px;
+    cursor: pointer;
+    box-shadow:0 3px 3px rgba(84, 84, 84, 0.6);
+    transition: .2s;
+}
+.pic  li.active{
+  width: 20px;
+  transition: .2s;  
 }
 .allact{
     margin-top: 120px;
