--- a/css/detail.css
+++ b/css/detail.css
@@ -2,15 +2,16 @@
     object-position:bottom;
 }
 section{
+    width: 83%;
     margin: auto;
     background-color: #fff;
-    padding:0 var(--col-gap) 70px;
+    padding:0 5% 70px;
     border-radius: 10px;
     margin-bottom: 50px;
 }
 section .breadcrumb{
     line-height: 70px;
-    font-size: 12px;
+    font-size: 16px;
     padding-left: 30px;
 }
 .info{
@@ -18,29 +19,36 @@ section .breadcrumb{
     margin: auto;
     justify-content: space-between;
     position: relative;
-    padding: 0px 30px;
+    padding: 0px 20px;
     margin-bottom: 30px;
 }
-.info .smallimg{
-    width: 10%;
+.info .pic{
+    display: flex;
+    width: 70%;
+    justify-content: space-evenly;
+}
+.info .pic .smallimg{
+    width: 20%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-.info .smallimg img{
+.info .pic .smallimg img{
+    display: block;
     width: 100%;
     height: 100%;
     border-radius: 10px;
     object-fit: cover;
     cursor: pointer;
 }
-.info .smallimg img+img{
+.info .pic .smallimg img+img{
     margin-top: 10px;
 }
-.info .mainimg{
-    width: 45%;
+.info .pic .mainimg{
+    display: inline-block;
+    width: 70%;
 }
-.info .mainimg img{
+.info .pic .mainimg img{
     width: 100%;
     height: 100%;
     border-radius: 10px;
@@ -86,7 +94,9 @@ background-color: #D0F1A6;
     color: #fff;
 }
 .info .txt .numbtn input{
-    width: 70px;
+    text-align: center;
+    font-size: 1rem;
+    width: 30%;
 }
 .info .txt .numbtn p{
     font-weight: 700;
@@ -94,7 +104,7 @@ background-color: #D0F1A6;
     margin-right: 10px;
 }
 .info .btnchangecolor{
-    width: 200px;
+    width: 100%;
     padding: 10px 0;
     border-radius: 100px;
     border:2px solid #2C6E00;
@@ -123,6 +133,7 @@ background-color: #D0F1A6;
 .detail .row img{
     width: 30%;
     border-radius: 10px;
+    object-fit: cover;
 }
 .detail .row p{
     width: 65%;
@@ -132,4 +143,118 @@ background-color: #D0F1A6;
 .detail .row:last-child{
     margin-top: 40px;
     flex-direction: row-reverse;
+}
+@media screen and (max-width:768px){
+    section{
+        width: 90%;
+        padding-bottom: 1rem;
+    }
+    .info{
+        flex-direction: column;
+        padding: 0 16px;
+    }
+    .info .pic{
+        width: 100%;
+        padding:0px;
+        flex-direction: column-reverse;
+        justify-content: space-around;
+    }
+    .info .pic .mainimg{
+        flex-wrap: wrap;
+        width: 100%;
+        padding: 5px;
+    }
+    .info .pic .smallimg{
+        width:25%;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .info .pic .smallimg img+img{
+        margin-top: 0px;
+    }
+    .info .pic .smallimg img{
+        padding: 5px;
+    }
+    .info .txt{
+        width: 100%;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .info .txt h2{
+        line-height: 2rem;
+        width: 100%;
+        text-align: center;
+    }
+    .info .txt .numbtn{
+        text-align: center;
+        line-height: 2rem;
+    }
+    .info .txt .btnchangecolor{
+        margin: auto;
+        width: 50%;
+    }
+    .detail h3{
+        font-size: 18px;
+        line-height: 2.5rem;
+    }
+    .detail .row{
+        align-items: center;
+    }
+    .detail .row img{
+        width: 38%;
+        display: block;
+        min-height: 180px;
+    }
+    .detail .row p{
+        width: 60%;
+        line-height: 1.2rem;
+        letter-spacing: 0px;
+    }
+    .detail .row:last-child{
+        margin-top: 1rem;
+    }
+}
+@media screen and (max-width:400px){
+    section{
+        width: 100%;
+        border-radius: 0;
+    }
+    section .breadcrumb{
+        line-height: 2.5rem;
+        text-align: center;
+        padding: 0px;
+    }
+    .info{
+        width: 100%;
+        padding: 0px;
+    }
+    .info .txt{
+        justify-content: space-around;
+    }
+    .info .txt>p{
+        width: 100%;
+        text-align: center;
+        margin: 0.5rem 0;
+    }
+    .detail .row{
+        flex-direction: column;
+    }
+    .detail .row{
+        align-items: center;
+    }
+    .detail .row img{
+        width: 100%;
+        display: block;
+        min-height: 180px;
+    }
+    .detail .row p{
+        width: 100%;
+        line-height: 1.2rem;
+        letter-spacing: 0px;
+        margin: 1rem 0px;
+    }
+    .detail .row:last-child{
+        margin-top: 0px;
+        flex-direction: column;
+    }
 }
